# mogoapp

./: app.py  pyproject.toml  validators_mongo.py
static/: styles.css
templates/: base.html  index.html  notes.html  signin.html  signup.html  update.html
