[tool.poetry]
name = "repl_python3_beta_mogoapp"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mongoengine = "^0.20.0"
flask = "^1.1.2"
flask-pymongo = "^2.3.0"
pymongo = {extras = ["srv"], version = "^3.11.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
